# BayesPublic

./: .cursorignore  .gitignore  README.md  SECURITY_CHECKLIST.md  SETUP_GUIDE.md
bayes-backend/: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  auth.py  main.py  migration_topic_progress.sql  pyproject.toml  requirements.txt
bayes-backend/models/: answer_models.py  content_models.py  email_models.py  feedback_models.py  github_models.py  ocr_models.py
bayes-backend/prompts/: calculus_tutor_prompt.py  check_work_prompt.py  generate_content_prompt.py  tommy_prompt.py
bayes-backend/routers/: __init__.py  answer.py  auth_router.py  content.py  email_router.py  feedback.py  github_router.py  ocr.py  subscription.py
bayes-backend/services/: email_service.py  gemini_feedback_service.py  gemini_vision_service.py  github_service.py  mathpix_service.py
bayes-backend/utils/: latex_utils.py
bayes-frontend/: .gitignore  README.md  eslint.config.mjs  next.config.ts  package-lock.json  package.json  tailwind.config.ts
bayes-frontend/public/: manifest.json
bayes-frontend/src/app/: globals.css  layout.tsx  page.tsx
bayes-frontend/src/app/learn/: page.tsx
bayes-frontend/src/app/login/: login-content.tsx  page.tsx
bayes-frontend/src/app/pricing/: page.tsx
bayes-frontend/src/app/privacy/: page.tsx
bayes-frontend/src/app/progress/: page.tsx
bayes-frontend/src/app/saved-topics/: page.tsx
bayes-frontend/src/app/success/: page.tsx
bayes-frontend/src/lib/: api.ts  auth-context.tsx  supabase.ts  utils.ts
(+26 files in other folders)
